2007-10-07 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: Display more useful messages
    than just "Fields missing" when fields are missing.
    * lib/fantasdic/sources/dict_server.rb: Ditto.    

2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Introducing open and close methods. They
    will be useful for plugins that need to open and close streams. Introducing
    connecting_to_source_str and transferring_data_str methods. This allows
    source plugins to override the status bar messages.

    * lib/fantasdic/sources/dict_server.rb: Following above changes
    * lib/fantasdic/ui/main_app.rb: Ditto.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Ditto.

2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Fixes bug when source plugin doesn't exist
    anymore.

2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dict_server.rb: "available_strategies" now returns a
    hash. Follow this change.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Ditto.
    * lib/fantasdic/source_base.rb: Documents methods which should be overridden
    by source classes.   

2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade: Uses "about" icon
    rather than "information" for the button next to the source combobox.

2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: When editing an existing
    dictionary, "search selected databases" was selected although there weren't
    selected databases.

2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: Remember config widget.

2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade: About source plugin
    button. Hopefully this should encourage more developers to write source