@@ -1,3 +1,8 @@
+2007-10-09 Mathieu Blondel <mblondel@svn.gnome.org>
+
+    * lib/fantasdic/ui/add_dictionary_dialog.rb: Don't crash if no plugin
+    found.
+
 2007-10-07 Mathieu Blondel <mblondel@svn.gnome.org>
 
     * lib/fantasdic/ui/add_dictionary_dialog.rb: Display more useful messages
